// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox 1`] = `
<div style="display: grid; gap: 2rem;">
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <div>
      <input
        type="checkbox"
        name="sm-default"
        id="components-input--checkbox-sm-default"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-checked"
        id="components-input--checkbox-sm-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-indeterminate"
        data-indeterminate="true"
        id="components-input--checkbox-sm-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-indeterminate"
      >
        Indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-disabled"
        disabled
        id="components-input--checkbox-sm-disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-sm-disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-disabled-checked"
        disabled
        id="components-input--checkbox-sm-disabled-checked"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-sm-disabled-checked"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-disabled-indeterminate"
        disabled
        data-indeterminate="true"
        id="components-input--checkbox-sm-disabled-indeterminate"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-sm-disabled-indeterminate"
      >
        Disabled indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-invalid"
        aria-invalid="true"
        id="components-input--checkbox-sm-invalid"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-invalid"
      >
        Invalid
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-invalid-checked"
        aria-invalid="true"
        id="components-input--checkbox-sm-invalid-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-invalid-checked"
      >
        Invalid checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-invalid-indeterminate"
        aria-invalid="true"
        data-indeterminate="true"
        id="components-input--checkbox-sm-invalid-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-invalid-indeterminate"
      >
        Invalid indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-read-only"
        readonly
        id="components-input--checkbox-sm-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-read-only-checked"
        readonly
        id="components-input--checkbox-sm-read-only-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-read-only-checked"
      >
        Read-only checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="sm-read-only-indeterminate"
        readonly
        data-indeterminate="true"
        id="components-input--checkbox-sm-read-only-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-sm-read-only-indeterminate"
      >
        Read-only indeterminate
      </label>
    </div>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <div>
      <input
        type="checkbox"
        name="md-default"
        id="components-input--checkbox-md-default"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-checked"
        id="components-input--checkbox-md-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-indeterminate"
        data-indeterminate="true"
        id="components-input--checkbox-md-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-indeterminate"
      >
        Indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-disabled"
        disabled
        id="components-input--checkbox-md-disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-md-disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-disabled-checked"
        disabled
        id="components-input--checkbox-md-disabled-checked"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-md-disabled-checked"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-disabled-indeterminate"
        disabled
        data-indeterminate="true"
        id="components-input--checkbox-md-disabled-indeterminate"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-md-disabled-indeterminate"
      >
        Disabled indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-invalid"
        aria-invalid="true"
        id="components-input--checkbox-md-invalid"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-invalid"
      >
        Invalid
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-invalid-checked"
        aria-invalid="true"
        id="components-input--checkbox-md-invalid-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-invalid-checked"
      >
        Invalid checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-invalid-indeterminate"
        aria-invalid="true"
        data-indeterminate="true"
        id="components-input--checkbox-md-invalid-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-invalid-indeterminate"
      >
        Invalid indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-read-only"
        readonly
        id="components-input--checkbox-md-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-read-only-checked"
        readonly
        id="components-input--checkbox-md-read-only-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-read-only-checked"
      >
        Read-only checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="md-read-only-indeterminate"
        readonly
        data-indeterminate="true"
        id="components-input--checkbox-md-read-only-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-md-read-only-indeterminate"
      >
        Read-only indeterminate
      </label>
    </div>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <div>
      <input
        type="checkbox"
        name="lg-default"
        id="components-input--checkbox-lg-default"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-checked"
        id="components-input--checkbox-lg-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-indeterminate"
        data-indeterminate="true"
        id="components-input--checkbox-lg-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-indeterminate"
      >
        Indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-disabled"
        disabled
        id="components-input--checkbox-lg-disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-lg-disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-disabled-checked"
        disabled
        id="components-input--checkbox-lg-disabled-checked"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-lg-disabled-checked"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-disabled-indeterminate"
        disabled
        data-indeterminate="true"
        id="components-input--checkbox-lg-disabled-indeterminate"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--checkbox-lg-disabled-indeterminate"
      >
        Disabled indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-invalid"
        aria-invalid="true"
        id="components-input--checkbox-lg-invalid"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-invalid"
      >
        Invalid
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-invalid-checked"
        aria-invalid="true"
        id="components-input--checkbox-lg-invalid-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-invalid-checked"
      >
        Invalid checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-invalid-indeterminate"
        aria-invalid="true"
        data-indeterminate="true"
        id="components-input--checkbox-lg-invalid-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-invalid-indeterminate"
      >
        Invalid indeterminate
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-read-only"
        readonly
        id="components-input--checkbox-lg-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-read-only-checked"
        readonly
        id="components-input--checkbox-lg-read-only-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-read-only-checked"
      >
        Read-only checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        name="lg-read-only-indeterminate"
        readonly
        data-indeterminate="true"
        id="components-input--checkbox-lg-read-only-indeterminate"
      >
      <label
        data-weight="medium"
        for="components-input--checkbox-lg-read-only-indeterminate"
      >
        Read-only indeterminate
      </label>
    </div>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-input--controlled"
  >
    Kontroller meg!
  </label>
  <input
    type="text"
    id="components-input--controlled"
    value
  >
</div>
<div>
  <hr aria-hidden="true">
  <p
    data-variant="default"
    style="margin: var(--ds-size-2) 0;"
  >
    Du har skrevet inn:
  </p>
  <button
    data-variant="primary"
    type="button"
  >
    Jeg vil ha Kake
  </button>
</div>
`;

exports[`Html Size 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-input--html-size"
  >
    Input with size
  </label>
  <input
    type="text"
    size="10"
    id="components-input--html-size"
  >
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-input--preview"
  >
    Input 1
  </label>
  <input
    type="text"
    aria-invalid="false"
    name="inputs"
    id="components-input--preview"
    checked
    aria-describedby="components-input--preview:validation"
  >
  <p
    data-field="validation"
    hidden
    id="components-input--preview:validation"
  >
    Feilmelding
  </p>
</div>
`;

exports[`Radio 1`] = `
<div>
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Small
    </h2>
    <div>
      <input
        type="radio"
        name="sm-Default"
        id="components-input--radio-sm-Default"
      >
      <label
        data-weight="medium"
        for="components-input--radio-sm-Default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="sm-Checked"
        id="components-input--radio-sm-Checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-sm-Checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="sm-Disabled"
        disabled
        id="components-input--radio-sm-Disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--radio-sm-Disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="sm-Disabled"
        disabled
        id="components-input--radio-sm-Disabled"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--radio-sm-Disabled"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="sm-Invalid"
        aria-invalid="true"
        id="components-input--radio-sm-Invalid"
      >
      <label
        data-weight="medium"
        for="components-input--radio-sm-Invalid"
      >
        Invalid
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="sm-Invalid"
        aria-invalid="true"
        id="components-input--radio-sm-Invalid"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-sm-Invalid"
      >
        Invalid checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="sm-Read-only"
        readonly
        id="components-input--radio-sm-Read-only"
      >
      <label
        data-weight="medium"
        for="components-input--radio-sm-Read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="sm-Read-only"
        readonly
        id="components-input--radio-sm-Read-only"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-sm-Read-only"
      >
        Read-only checked
      </label>
    </div>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Medium
    </h2>
    <div>
      <input
        type="radio"
        name="md-Default"
        id="components-input--radio-md-Default"
      >
      <label
        data-weight="medium"
        for="components-input--radio-md-Default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="md-Checked"
        id="components-input--radio-md-Checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-md-Checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="md-Disabled"
        disabled
        id="components-input--radio-md-Disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--radio-md-Disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="md-Disabled"
        disabled
        id="components-input--radio-md-Disabled"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--radio-md-Disabled"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="md-Invalid"
        aria-invalid="true"
        id="components-input--radio-md-Invalid"
      >
      <label
        data-weight="medium"
        for="components-input--radio-md-Invalid"
      >
        Invalid
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="md-Invalid"
        aria-invalid="true"
        id="components-input--radio-md-Invalid"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-md-Invalid"
      >
        Invalid checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="md-Read-only"
        readonly
        id="components-input--radio-md-Read-only"
      >
      <label
        data-weight="medium"
        for="components-input--radio-md-Read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="md-Read-only"
        readonly
        id="components-input--radio-md-Read-only"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-md-Read-only"
      >
        Read-only checked
      </label>
    </div>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Large
    </h2>
    <div>
      <input
        type="radio"
        name="lg-Default"
        id="components-input--radio-lg-Default"
      >
      <label
        data-weight="medium"
        for="components-input--radio-lg-Default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="lg-Checked"
        id="components-input--radio-lg-Checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-lg-Checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="lg-Disabled"
        disabled
        id="components-input--radio-lg-Disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--radio-lg-Disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="lg-Disabled"
        disabled
        id="components-input--radio-lg-Disabled"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--radio-lg-Disabled"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="lg-Invalid"
        aria-invalid="true"
        id="components-input--radio-lg-Invalid"
      >
      <label
        data-weight="medium"
        for="components-input--radio-lg-Invalid"
      >
        Invalid
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="lg-Invalid"
        aria-invalid="true"
        id="components-input--radio-lg-Invalid"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-lg-Invalid"
      >
        Invalid checked
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="lg-Read-only"
        readonly
        id="components-input--radio-lg-Read-only"
      >
      <label
        data-weight="medium"
        for="components-input--radio-lg-Read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="radio"
        name="lg-Read-only"
        readonly
        id="components-input--radio-lg-Read-only"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--radio-lg-Read-only"
      >
        Read-only checked
      </label>
    </div>
  </div>
</div>
`;

exports[`Switch 1`] = `
<div style="display: grid; gap: 2rem;">
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="sm-default"
        id="components-input--switch-sm-default"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="sm-checked"
        id="components-input--switch-sm-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="sm-disabled"
        disabled
        id="components-input--switch-sm-disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--switch-sm-disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="sm-disabled-checked"
        disabled
        id="components-input--switch-sm-disabled-checked"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--switch-sm-disabled-checked"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="sm-read-only"
        readonly
        id="components-input--switch-sm-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="sm-read-only-checked"
        readonly
        id="components-input--switch-sm-read-only-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--switch-sm-read-only-checked"
      >
        Read-only checked
      </label>
    </div>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="md-default"
        id="components-input--switch-md-default"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="md-checked"
        id="components-input--switch-md-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="md-disabled"
        disabled
        id="components-input--switch-md-disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--switch-md-disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="md-disabled-checked"
        disabled
        id="components-input--switch-md-disabled-checked"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--switch-md-disabled-checked"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="md-read-only"
        readonly
        id="components-input--switch-md-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="md-read-only-checked"
        readonly
        id="components-input--switch-md-read-only-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--switch-md-read-only-checked"
      >
        Read-only checked
      </label>
    </div>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="lg-default"
        id="components-input--switch-lg-default"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-default"
      >
        Default
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="lg-checked"
        id="components-input--switch-lg-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-checked"
      >
        Checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="lg-disabled"
        disabled
        id="components-input--switch-lg-disabled"
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--switch-lg-disabled"
      >
        Disabled
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="lg-disabled-checked"
        disabled
        id="components-input--switch-lg-disabled-checked"
        checked
      >
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--switch-lg-disabled-checked"
      >
        Disabled checked
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="lg-read-only"
        readonly
        id="components-input--switch-lg-read-only"
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-read-only"
      >
        Read-only
      </label>
    </div>
    <div>
      <input
        type="checkbox"
        role="switch"
        name="lg-read-only-checked"
        readonly
        id="components-input--switch-lg-read-only-checked"
        checked
      >
      <label
        data-weight="medium"
        for="components-input--switch-lg-read-only-checked"
      >
        Read-only checked
      </label>
    </div>
  </div>
</div>
`;

exports[`Text 1`] = `
<div>
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-sm-default"
      >
        Default
      </label>
      <input
        type="text"
        name="sm-default"
        data-size="sm"
        id="components-input--text-sm-default"
        value="Value"
      >
    </div>
    <div>
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--text-sm-disabled"
      >
        Disabled
      </label>
      <input
        type="text"
        name="sm-disabled"
        disabled
        data-size="sm"
        id="components-input--text-sm-disabled"
        value="Value"
      >
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-sm-invalid"
      >
        Invalid
      </label>
      <input
        type="text"
        name="sm-invalid"
        aria-invalid="true"
        data-size="sm"
        id="components-input--text-sm-invalid"
        value="Value"
        aria-describedby="components-input--text-sm-invalid:validation"
      >
      <p
        data-field="validation"
        id="components-input--text-sm-invalid:validation"
      >
        Feilmelding
      </p>
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-sm-read-only"
      >
        Read-only
      </label>
      <input
        type="text"
        name="sm-read-only"
        readonly
        data-size="sm"
        id="components-input--text-sm-read-only"
        value="Value"
      >
    </div>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-md-default"
      >
        Default
      </label>
      <input
        type="text"
        name="md-default"
        data-size="md"
        id="components-input--text-md-default"
        value="Value"
      >
    </div>
    <div>
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--text-md-disabled"
      >
        Disabled
      </label>
      <input
        type="text"
        name="md-disabled"
        disabled
        data-size="md"
        id="components-input--text-md-disabled"
        value="Value"
      >
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-md-invalid"
      >
        Invalid
      </label>
      <input
        type="text"
        name="md-invalid"
        aria-invalid="true"
        data-size="md"
        id="components-input--text-md-invalid"
        value="Value"
        aria-describedby="components-input--text-md-invalid:validation"
      >
      <p
        data-field="validation"
        id="components-input--text-md-invalid:validation"
      >
        Feilmelding
      </p>
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-md-read-only"
      >
        Read-only
      </label>
      <input
        type="text"
        name="md-read-only"
        readonly
        data-size="md"
        id="components-input--text-md-read-only"
        value="Value"
      >
    </div>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-lg-default"
      >
        Default
      </label>
      <input
        type="text"
        name="lg-default"
        data-size="lg"
        id="components-input--text-lg-default"
        value="Value"
      >
    </div>
    <div>
      <label
        data-weight="medium"
        aria-disabled="true"
        for="components-input--text-lg-disabled"
      >
        Disabled
      </label>
      <input
        type="text"
        name="lg-disabled"
        disabled
        data-size="lg"
        id="components-input--text-lg-disabled"
        value="Value"
      >
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-lg-invalid"
      >
        Invalid
      </label>
      <input
        type="text"
        name="lg-invalid"
        aria-invalid="true"
        data-size="lg"
        id="components-input--text-lg-invalid"
        value="Value"
        aria-describedby="components-input--text-lg-invalid:validation"
      >
      <p
        data-field="validation"
        id="components-input--text-lg-invalid:validation"
      >
        Feilmelding
      </p>
    </div>
    <div>
      <label
        data-weight="medium"
        for="components-input--text-lg-read-only"
      >
        Read-only
      </label>
      <input
        type="text"
        name="lg-read-only"
        readonly
        data-size="lg"
        id="components-input--text-lg-read-only"
        value="Value"
      >
    </div>
  </div>
</div>
`;
